# openportfolio

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.dev  README.md  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  entrypoint.dev.sh  entrypoint.sh  fly.toml  nginx.conf
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline.py
backend/app/: allocation.py  auth.py  bootstrap.py  classifications.py  config.py  constants.py  db.py  drift.py  llm.py  lookthrough.py  main.py  merge_extract.py  models.py  pdf_text.py  rebalance.py  schemas.py  scrub_digits.py  taxonomy.py  validation.py
backend/app/features/: __init__.py
backend/app/features/accounts/: __init__.py  (+3 more)
backend/app/services/: __init__.py  classification_rows.py  commit_service.py  portfolio_snapshot.py  targets_validation.py
backend/app/shared/: __init__.py
backend/tests/: conftest.py  db_helpers.py  test_accounts.py  test_alembic_baseline_matches_models.py  test_allocation.py  test_allocation_positions.py  test_auth.py  test_classifications.py  test_classifications_api.py  test_commit.py  test_drift.py  test_export.py  test_extract.py  test_institutions.py  test_liabilities.py  test_lookthrough.py  test_merge_extract.py  test_openapi.py  test_pdf_text.py  test_portfolios.py  test_positions.py  test_rebalance.py  test_scrub_digits.py  test_snapshots.py  test_targets.py  test_validation.py
backend/tests/fixtures/: fidelity.txt  fidelity_llm.json  schwab.txt  schwab_llm.json  vanguard.txt  vanguard_llm.json
(+217 files in other folders)
