[project]
name = "openportfolio-backend"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.36",
    "pydantic-settings>=2.6.0",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
    "types-pyyaml>=6.0.12",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
